EPMRPP-121363 || Ensure TMS attachment operations are project-bound (#2825)